tests/baselines/reference/parser_breakTarget4.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakTarget4.ts(1,1): error TS7028: Unused label.


==== tests/cases/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakTarget4.ts (1 errors) ====
    target1:
    ~~~~~~~
!!! error TS7028: Unused label.
    target2:
    while (true) {
      break target2;
    }